samples/_failures_safe/1761040272_8d5c9a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bfacf748.c: In function ‘main’:
./samples/SAFE/__tmp_bfacf748.c:139:9: error: expected expression at end of input
  139 |         if (multiply_matrices(&a,
      |         ^~
./samples/SAFE/__tmp_bfacf748.c:139:13: error: too few arguments to function ‘multiply_matrices’
  139 |         if (multiply_matrices(&a,
      |             ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bfacf748.c:71:5: note: declared here
   71 | int multiply_matrices(const Matrix* a, const Matrix* b, Matrix* result) {
      |     ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bfacf748.c:139:9: error: expected declaration or statement at end of input
  139 |         if (multiply_matrices(&a,
      |         ^~
./samples/SAFE/__tmp_bfacf748.c:139:9: error: expected declaration or statement at end of input
